--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
 name: Rishi Kothari, Developer
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
+
+
+collections:
+  projects:
+    output: true
+    permalink: /projects/:name
